infra/k8s-gcp/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapme-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapme-backend
  template:
    metadata:
      labels:
        app: mapme-backend
    spec:
      containers:
      - name: mapme-backend
        image: us.gcr.io/meet-sync-438611/mapme-server
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: mapme-backend-srv
spec:
  selector:
    app: mapme-backend
  ports:
  - name: mapme-backend
    protocol: TCP
    port: 3000
    targetPort: 3000
